# aas-timeseries

./: .gitignore  .rtd-environment.yml  .travis.yml  .validate-notebooks.py  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  azure-template.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.ci/: Dockerfile  README.md  start-xvfb
aas_time_series/: __init__.py  visualization.py
aas_timeseries/: __init__.py  _docstrings.py  backports.py  colors.py  conftest.py  data.py  layers.py  marks.py  matplotlib.py  traits.py  views.py  visualization.py
aas_timeseries/screenshot/: __init__.py  data_server.py  qt_web_widget.py  screenshot.py  setup_package.py  template.html
aas_timeseries/screenshot/tests/: test_screenshot.py
aas_timeseries/tests/: helpers.py  test_layers.py  test_matplotlib.py  test_visualization.py
aas_timeseries/tests/data/: phase.csv
aas_timeseries/tests/data/basic/: data_daea58ba-4c73-4942-8d87-78e7d340bbcd.csv  figure.json
aas_timeseries/tests/data/mixed_time_axes/: data_daea58ba-4c73-4942-8d87-78e7d340bbcd.csv  figure.json
aas_timeseries/tests/data/mixed_time_axes_custom_format/: data_daea58ba-4c73-4942-8d87-78e7d340bbcd.csv  figure.json
aas_timeseries/tests/data/save_options_embed/: figure.json
aas_timeseries/tests/data/save_options_no_minimize/: data_daea58ba-4c73-4942-8d87-78e7d340bbcd.csv  figure.json
docs/: api.rst  conf.py  data_18eb43c0-98ec-4ae7-b778-8eb9b3052028.csv  getting_started.ipynb  getting_started.rst  index.rst  installing.rst  layers.ipynb  saving.rst  submitting.rst  test_error.json  timeaxes.ipynb  views.ipynb
docs/aas_time_series/: index.rst
licenses/: LICENSE.rst
