[metadata]
name = aas-timeseries
description = Experimental package to make interactive visualizations for time series, for AAS Publications
long_description = file: README.rst
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD 3-Clause
url = http://aas-timeseries.readthedocs.io
install_requires =
    traitlets
    palettable
    astropy
    jupyter-aas-timeseries
    astropy-timeseries @ git+https://github.com/aperiosoftware/astropy-timeseries#egg=astropy-timeseries, matplotlib

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
	traitlets
	palettable
	astropy
	jupyter-aas-timeseries
	astropy-timeseries@ git+https://github.com/aperiosoftware/astropy-timeseries#egg=astropy-timeseries
	matplotlib

[options.extras_require]
docs = sphinx-astropy; nbsphinx; sphinx_rtd_theme
# We exclude some PyQt versions because they are missing QWebEngine
test = pytest-astropy; pytest-cov; qtpy; PyQt5<5.11.3; flask; flask-cors

[options.package_data]
aas_timeseries = **/data/**/*
aas_timeseries.tests = coveragerc

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py
