[metadata]
name = aas-timeseries
description = Experimental package to make interactive visualizations for time series, for AAS Publications
long_description = file: README.rst
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD 3-Clause
url = http://aas-timeseries.readthedocs.io

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
  traitlets
  palettable
  astropy
  jupyter-aas-timeseries
  matplotlib

[options.extras_require]
docs = sphinx-astropy; nbsphinx; sphinx_rtd_theme
test =
  pytest-astropy
  pytest-cov
  qtpy
  PyQt5>=5.12
  PyQtWebEngine
  flask
  flask-cors
  faker

[options.package_data]
aas_timeseries = **/data/**/*
aas_timeseries.tests = coveragerc

[bdist_wheel]
universal = true

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py
