[metadata]
name = aas-timeseries
description = Experimental package to make interactive visualizations for time series, for AAS Publications
long_description = file: README.rst
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD 3-Clause
url = http://aas-timeseries.readthedocs.io

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
  traitlets
  palettable
  astropy
  jupyter-aas-timeseries
  matplotlib

[options.extras_require]
docs = sphinx-astropy; nbsphinx; sphinx_rtd_theme
test =
  pytest-astropy
  pytest-cov
  qtpy
  PyQt5>=5.12,<5.14
  PyQtWebEngine<5.14
  tornado
  faker

[options.package_data]
aas_timeseries =
  **/data/*
  **/data/**/*
  screenshot/template.html
aas_timeseries.tests =
  coveragerc

[bdist_wheel]
universal = true

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[coverage:run]
omit =
    aas_timeseries/conftest.py
    aas_timeseries/tests/*
    aas_timeseries/*/tests/*
    */aas_timeseries/conftest.py
    */aas_timeseries/tests/*
    */aas_timeseries/*/tests/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
